Implementacion de boton interactivo

--- a/prueba.html
+++ b/prueba.html
@@ -86,6 +86,16 @@
 <h3>Hora Actual:</h3>
 <p id="reloj"></p>
 
+<div class="contenedor">
+  <h3>Boton interactivo</h3>
+  <button id="marioBtn" class="boton_mario">Bloque Mario</button>
+  
+</div>
+
+  <audio id="mariomoneda" src="audio/mario_sound.mp3" preload="auto"></audio>
+
+  <script src="animaciones.js"></script>
+
 <script src="animaciones.js"></script>
 </body>
 </html>
