Animacion cursor y tema

--- a/prueba.html
+++ b/prueba.html
@@ -96,6 +96,11 @@
 
   <script src="animaciones.js"></script>
 
+<h3>Cambio modo</h3>
+  <button id="modoBtn" class="boton_tema" onclick="cambiarModo()">Modo oscuro</button>
+
+
+
 <script src="animaciones.js"></script>
 </body>
 </html>
