Cambio de modelo en checkbox

--- a/prueba.html
+++ b/prueba.html
@@ -38,13 +38,47 @@
 <h4>Con esto podemos realizar listas con check para describir varias cosas, como habilidades.</h4>
 
 <ul id="checks">
+  <li>
+    <div class="checkbox">
+      <input id="check1" class="checkbox__input" type="checkbox" checked enabled>
+      <label for="check1" class="checkbox__label">
+        <span class="checkbox__custom"></span>
+        Java Skills
+      </label>
+    </div>
+  </li>
 
-  <li><input type="checkbox" disabled checked>Java Skills</li>
-  <li><input type="checkbox" disabled checked>Python Skills</li>
-  <li><input type="checkbox" disabled checked>JS Skills</li>
-  <li><input type="checkbox" enable checked>Inteligencia artificial</li> 
+  <li>
+    <div class="checkbox">
+      <input id="check2" class="checkbox__input" type="checkbox" checked enabled>
+      <label for="check2" class="checkbox__label">
+        <span class="checkbox__custom"></span>
+        Python Skills
+      </label>
+    </div>
+  </li>
 
+  <li>
+    <div class="checkbox">
+      <input id="check3" class="checkbox__input" type="checkbox" checked enabled>
+      <label for="check3" class="checkbox__label">
+        <span class="checkbox__custom"></span>
+        JS Skills
+      </label>
+    </div>
+  </li>
+
+  <li>
+    <div class="checkbox">
+      <input id="check4" class="checkbox__input" type="checkbox" checked disabled>
+      <label for="check4" class="checkbox__label">
+        <span class="checkbox__custom"></span>
+        Inteligencia Artificial
+      </label>
+    </div>
+  </li>
 </ul>
+
 
 <h3>CSSvsJS</h3>
 
