--- a/prueba.html
+++ b/prueba.html
@@ -121,14 +121,15 @@
 <p id="reloj"></p>
 
 <div class="contenedor">
-  <h3>Boton interactivo</h3>
-  <button id="marioBtn" class="boton_mario">Bloque Mario</button>
-  
+  <h3>Botón interactivo</h3>
+  <button id="marioBtn" class="boton_mario">
+    <span class="question">?</span>
+  </button>
 </div>
 
-  <audio id="mariomoneda" src="audio/mario_sound.mp3" preload="auto"></audio>
+<audio id="mariomoneda" src="audio/mario_sound.mp3" preload="auto"></audio>
 
-  <script src="animaciones.js"></script>
+<script src="animaciones.js"></script>
 
 <h3>Cambio modo</h3>
   <button id="modoBtn" class="boton_tema" onclick="cambiarModo()">Modo oscuro</button>
