--- a/prueba.html
+++ b/prueba.html
@@ -137,5 +137,11 @@
 
 
 <script src="animaciones.js"></script>
+
+<h3>Control de audios</h3>
+
+<audio src="audio/musica_brasil.mp3" controls></audio>
+
+
 </body>
 </html>
