--- a/prueba.html
+++ b/prueba.html
@@ -1,147 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="modelo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="modelo.css">
 </head>
+
 <body>
+  <h1 id="titulo">HTML</h1>
 
-       
-<h1 id="titulo">HTML</h1>
+  <p> Prueba de manejo de etiquetas en html </p>
 
-<p> Prueba de manejo de etiquetas en html </p>
-
-<h2 id="etiqueta">Diferentes etiquetas </h2>
-<p id="contexto">
+  <h2 id="etiqueta">Diferentes etiquetas </h2>
+  <p id="contexto">
     Esto sera un uso de <strong>negritas</strong> y de <em>cursivas</em>
     para el desarrollo de una web, con una correcta <em><strong>semantica</strong>
-    al realizar esto evitamos lo llamado <s>malas practicas</s>.
-</p>
-<p> El uso de resaltados para poner enfasis en <mark>palabras clave</mark>.
-    
-<ul id="listado">
+      al realizar esto evitamos lo llamado <s>malas practicas</s>.
+  </p>
+  <p> El uso de resaltados para poner enfasis en <mark>palabras clave</mark>.
+
+  <ul id="listado">
 
     <li>Se puede poner listado de palabras.</li>
     <li>Las cuales se acomodan automaticamente</li>
 
-</ul>
+  </ul>
 
-<ol>
+  <ol>
 
     <li>Usando tambien el ol se puede dar referencia.</li>
-    <li>A ideas enumeradas de manera automatica</li> 
+    <li>A ideas enumeradas de manera automatica</li>
 
-</ol>
+  </ol>
 
-<h4>Con esto podemos realizar listas con check para describir varias cosas, como habilidades.</h4>
+  <h4>Con esto podemos realizar listas con check para describir varias cosas, como habilidades.</h4>
 
-<ul id="checks">
-  <li>
-    <div class="checkbox">
-      <input id="check1" class="checkbox__input" type="checkbox" checked enabled>
-      <label for="check1" class="checkbox__label">
-        <span class="checkbox__custom"></span>
-        Java Skills
-      </label>
-    </div>
-  </li>
+  <ul id="checks">
+    <li>
+      <div class="checkbox">
+        <input id="check1" class="checkbox__input" type="checkbox" checked enabled>
+        <label for="check1" class="checkbox__label">
+          <span class="checkbox__custom"></span>
+          Java Skills
+        </label>
+      </div>
+    </li>
 
-  <li>
-    <div class="checkbox">
-      <input id="check2" class="checkbox__input" type="checkbox" checked enabled>
-      <label for="check2" class="checkbox__label">
-        <span class="checkbox__custom"></span>
-        Python Skills
-      </label>
-    </div>
-  </li>
+    <li>
+      <div class="checkbox">
+        <input id="check2" class="checkbox__input" type="checkbox" checked enabled>
+        <label for="check2" class="checkbox__label">
+          <span class="checkbox__custom"></span>
+          Python Skills
+        </label>
+      </div>
+    </li>
 
-  <li>
-    <div class="checkbox">
-      <input id="check3" class="checkbox__input" type="checkbox" checked enabled>
-      <label for="check3" class="checkbox__label">
-        <span class="checkbox__custom"></span>
-        JS Skills
-      </label>
-    </div>
-  </li>
+    <li>
+      <div class="checkbox">
+        <input id="check3" class="checkbox__input" type="checkbox" checked enabled>
+        <label for="check3" class="checkbox__label">
+          <span class="checkbox__custom"></span>
+          JS Skills
+        </label>
+      </div>
+    </li>
 
-  <li>
-    <div class="checkbox">
-      <input id="check4" class="checkbox__input" type="checkbox" checked disabled>
-      <label for="check4" class="checkbox__label">
-        <span class="checkbox__custom"></span>
-        Inteligencia Artificial
-      </label>
-    </div>
-  </li>
-</ul>
-
-
-<h3>CSSvsJS</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>CSS</th>
-      <th>JS</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Arquitectura modular</td>
-      <td>Logica y animacion</td>
-    </tr>
-    <tr>
-      <td>Facil de manejar</td>
-      <td>Variedad de Funciones</td>
-    </tr>
-  </tbody>
-</table>
+    <li>
+      <div class="checkbox">
+        <input id="check4" class="checkbox__input" type="checkbox" checked disabled>
+        <label for="check4" class="checkbox__label">
+          <span class="checkbox__custom"></span>
+          Inteligencia Artificial
+        </label>
+      </div>
+    </li>
+  </ul>
 
 
-<ul id="links">
+  <h3>CSSvsJS</h3>
 
-    <li>Para conocerme mas puede seguirme en Facebook <a href="https://www.facebook.com/copypapel.papeleria.5/about_details?locale=es_LA">EriJS</a></li>
-    <li>Tambien puedes tener atencion en mi pagina personal de youtube <a href="https://www.youtube.com/@megamario2428">Marioneitor</a></li>
+  <table>
+    <thead>
+      <tr>
+        <th>CSS</th>
+        <th>JS</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Arquitectura modular</td>
+        <td>Logica y animacion</td>
+      </tr>
+      <tr>
+        <td>Facil de manejar</td>
+        <td>Variedad de Funciones</td>
+      </tr>
+    </tbody>
+  </table>
 
-</ul>
 
-<hr>     
+  <ul id="links">
 
-<div class="image-container">
-  <img src="imagen/orange.jpg" alt="Imagen rotatoria">
-</div>
+    <li>Para conocerme mas puede seguirme en Facebook <a
+        href="https://www.facebook.com/copypapel.papeleria.5/about_details?locale=es_LA">EriJS</a></li>
+    <li>Tambien puedes tener atencion en mi pagina personal de youtube <a
+        href="https://www.youtube.com/@megamario2428">Marioneitor</a></li>
+
+  </ul>
+
+  <hr>
+
+  <div class="image-container">
+    <img src="imagen/orange.jpg" alt="Imagen rotatoria">
+  </div>
 
 
 
-<h3>Hora Actual:</h3>
-<p id="reloj"></p>
+  <h3>Hora Actual:</h3>
+  <p id="reloj"></p>
 
-<div class="contenedor">
-  <h3>Botón interactivo</h3>
-  <button id="marioBtn" class="boton_mario">
-    <span class="question">?</span>
-  </button>
-</div>
+  <div class="contenedor">
+    <h3>Botón interactivo</h3>
+    <button id="marioBtn" class="boton_mario">
+      <span class="question">?</span>
+    </button>
+  </div>
 
-<audio id="mariomoneda" src="audio/mario_sound.mp3" preload="auto"></audio>
+  <audio id="mariomoneda" src="audio/mario_sound.mp3" preload="auto"></audio>
 
-<script src="animaciones.js"></script>
+  <script src="animaciones.js"></script>
 
-<h3>Cambio modo</h3>
+  <h3>Cambio modo</h3>
   <button id="modoBtn" class="boton_tema" onclick="cambiarModo()">Modo oscuro</button>
 
 
 
-<script src="animaciones.js"></script>
+  <script src="animaciones.js"></script>
 
-<h3>Control de audios</h3>
+  <h3>Control de audios</h3>
 
-<audio src="audio/musica_brasil.mp3" controls></audio>
+  <audio src="audio/musica_brasil.mp3" controls></audio>
 
 
 </body>
+
 </html>
